Filter toolbar svg icons, and MapData icon variants.
Switches to svg icons in example custom applications, too.

--- a/Qt/ApplicationComponents/Resources/UI/pqColorOpacityEditorWidget.ui
+++ b/Qt/ApplicationComponents/Resources/UI/pqColorOpacityEditorWidget.ui
@@ -79,7 +79,7 @@
          </property>
          <property name="icon">
           <iconset resource="../../../Components/Resources/pqComponents.qrc">
-           <normaloff>:/pqWidgets/Icons/pqResetRange24.png</normaloff>:/pqWidgets/Icons/pqResetRange24.png</iconset>
+           <normaloff>:/pqWidgets/Icons/pqResetRange.svg</normaloff>:/pqWidgets/Icons/pqResetRange.svg</iconset>
          </property>
         </widget>
        </item>
@@ -93,7 +93,7 @@
          </property>
          <property name="icon">
           <iconset resource="../../../Components/Resources/pqComponents.qrc">
-           <normaloff>:/pqWidgets/Icons/pqResetRangeCustom24.png</normaloff>:/pqWidgets/Icons/pqResetRangeCustom24.png</iconset>
+           <normaloff>:/pqWidgets/Icons/pqResetRangeCustom.svg</normaloff>:/pqWidgets/Icons/pqResetRangeCustom.svg</iconset>
          </property>
         </widget>
        </item>
@@ -107,7 +107,7 @@
          </property>
          <property name="icon">
           <iconset resource="../../../Components/Resources/pqComponents.qrc">
-           <normaloff>:/pqWidgets/Icons/pqResetRangeTemporal24.png</normaloff>:/pqWidgets/Icons/pqResetRangeTemporal24.png</iconset>
+           <normaloff>:/pqWidgets/Icons/pqResetRangeTemporal.svg</normaloff>:/pqWidgets/Icons/pqResetRangeTemporal.svg</iconset>
          </property>
         </widget>
        </item>
@@ -162,7 +162,7 @@
          </property>
          <property name="icon">
           <iconset resource="../../../Components/Resources/pqComponents.qrc">
-           <normaloff>:/pqWidgets/Icons/pqFavorites16.png</normaloff>:/pqWidgets/Icons/pqFavorites16.png</iconset>
+           <normaloff>:/pqWidgets/Icons/pqFavorites.svg</normaloff>:/pqWidgets/Icons/pqFavorites.svg</iconset>
          </property>
         </widget>
        </item>
