--- a/Qt/ApplicationComponents/Resources/UI/pqColorAnnotationsPropertyWidget.ui
+++ b/Qt/ApplicationComponents/Resources/UI/pqColorAnnotationsPropertyWidget.ui
@@ -82,7 +82,7 @@
        </property>
        <property name="icon">
         <iconset resource="../../../Components/Resources/pqComponents.qrc">
-         <normaloff>:/pqWidgets/Icons/pqFavorites16.png</normaloff>:/pqWidgets/Icons/pqFavorites16.png</iconset>
+         <normaloff>:/pqWidgets/Icons/pqFavorites.svg</normaloff>:/pqWidgets/Icons/pqFavorites.svg</iconset>
        </property>
       </widget>
      </item>
