--- a/Qt/ApplicationComponents/Resources/UI/pqColorEditorPropertyWidget.ui
+++ b/Qt/ApplicationComponents/Resources/UI/pqColorEditorPropertyWidget.ui
@@ -104,7 +104,7 @@
      </property>
      <property name="icon">
       <iconset resource="../../../Components/Resources/pqComponents.qrc">
-       <normaloff>:/pqWidgets/Icons/pqScalarBar24.png</normaloff>:/pqWidgets/Icons/pqScalarBar24.png</iconset>
+       <normaloff>:/pqWidgets/Icons/pqScalarBar.svg</normaloff>:/pqWidgets/Icons/pqScalarBar.svg</iconset>
      </property>
      <property name="checkable">
       <bool>true</bool>
