SVG icons for array selection

--- a/Qt/Components/Resources/pqComponents.qrc
+++ b/Qt/Components/Resources/pqComponents.qrc
@@ -181,9 +181,9 @@
         <file>Icons/pqSurfaceHoveringPoint.svg</file>
         <file>Icons/pqSurfaceHoveringCell.svg</file>
         <file>Icons/pqSurfaceSelectionCell.svg</file>
-        <file>Icons/pqSurfaceSelectionCellDataInteractive.png</file>
+        <file>Icons/pqSurfaceSelectionCellDataInteractive.svg</file>
         <file>Icons/pqSurfaceSelectionCellInteractive.svg</file>
-        <file>Icons/pqSurfaceSelectionPointDataInteractive.png</file>
+        <file>Icons/pqSurfaceSelectionPointDataInteractive.svg</file>
         <file>Icons/pqSurfaceSelectionPointInteractive.svg</file>
         <file>Icons/pqSurfaceSelectionPoint.svg</file>
         <file>Icons/pqTextAlignRight16.png</file>
