--- a/Qt/Widgets/Resources/UI/pqLogViewerWidget.ui
+++ b/Qt/Widgets/Resources/UI/pqLogViewerWidget.ui
@@ -14,26 +14,41 @@
    <string>Form</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
-   <property name="leftMargin">
-    <number>0</number>
+   <property name="spacing">
+    <number>4</number>
    </property>
-   <property name="topMargin">
-    <number>0</number>
-   </property>
-   <property name="rightMargin">
-    <number>0</number>
-   </property>
-   <property name="bottomMargin">
+   <property name="margin">
     <number>0</number>
    </property>
    <item>
-    <widget class="QLineEdit" name="filter">
-     <property name="placeholderText">
-      <string>filter</string>
-     </property>
-     <property name="clearButtonEnabled">
-      <bool>true</bool>
-     </property>
+    <widget class="QWidget" name="widget" native="true">
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <property name="margin">
+       <number>0</number>
+      </property>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="QWidget" name="controlsWidget" native="true">
+     <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <property name="spacing">
+       <number>4</number>
+      </property>
+      <property name="margin">
+       <number>0</number>
+      </property>
+      <item>
+       <widget class="QLineEdit" name="filter">
+        <property name="placeholderText">
+         <string>filter</string>
+        </property>
+        <property name="clearButtonEnabled" stdset="0">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </widget>
    </item>
    <item>
@@ -63,7 +78,7 @@
       <property name="readOnly">
        <bool>true</bool>
       </property>
-      <property name="placeholderText">
+      <property name="placeholderText" stdset="0">
        <string>Details</string>
       </property>
      </widget>
