--- a/Qt/Core/Resources/UI/pqOutputWidget.ui
+++ b/Qt/Core/Resources/UI/pqOutputWidget.ui
@@ -73,6 +73,13 @@
       </widget>
      </item>
      <item>
+      <widget class="QPushButton" name="copyButton">
+       <property name="text">
+        <string>Copy to Clipboard.</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QPushButton" name="saveButton">
        <property name="text">
         <string>Save to File...</string>
