support data assembly
Adding ParaView components to support vtkDataAssembly. Adding support to
ServerManager to collect information about vtkDataAssembly. Adding
ability to define properties that use vtkDataAssembly. Adding Qt
components for using vtkDataAssembly to generate UI.

--- a/Qt/Components/Resources/UI/pqProxyInformationWidget.ui
+++ b/Qt/Components/Resources/UI/pqProxyInformationWidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>276</width>
-    <height>991</height>
+    <height>1019</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -23,14 +23,81 @@
    <property name="spacing">
     <number>6</number>
    </property>
-   <property name="margin">
+   <property name="leftMargin">
+    <number>9</number>
+   </property>
+   <property name="topMargin">
+    <number>9</number>
+   </property>
+   <property name="rightMargin">
+    <number>9</number>
+   </property>
+   <property name="bottomMargin">
     <number>9</number>
    </property>
    <item>
-    <widget class="pqTreeView" name="compositeTree">
-     <property name="uniformRowHeights">
-      <bool>true</bool>
+    <widget class="QTabWidget" name="hierarchyTabWidget">
+     <property name="currentIndex">
+      <number>0</number>
      </property>
+     <widget class="QWidget" name="tab">
+      <attribute name="title">
+       <string>Structure</string>
+      </attribute>
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <property name="leftMargin">
+        <number>2</number>
+       </property>
+       <property name="topMargin">
+        <number>2</number>
+       </property>
+       <property name="rightMargin">
+        <number>2</number>
+       </property>
+       <property name="bottomMargin">
+        <number>2</number>
+       </property>
+       <item>
+        <widget class="pqTreeView" name="compositeTree">
+         <property name="uniformRowHeights">
+          <bool>true</bool>
+         </property>
+         <attribute name="headerVisible">
+          <bool>false</bool>
+         </attribute>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="tab_2">
+      <attribute name="title">
+       <string>Assembly</string>
+      </attribute>
+      <layout class="QVBoxLayout" name="verticalLayout_2">
+       <property name="leftMargin">
+        <number>2</number>
+       </property>
+       <property name="topMargin">
+        <number>2</number>
+       </property>
+       <property name="rightMargin">
+        <number>2</number>
+       </property>
+       <property name="bottomMargin">
+        <number>2</number>
+       </property>
+       <item>
+        <widget class="pqTreeView" name="assemblyTree">
+         <property name="uniformRowHeights">
+          <bool>true</bool>
+         </property>
+         <attribute name="headerVisible">
+          <bool>false</bool>
+         </attribute>
+        </widget>
+       </item>
+      </layout>
+     </widget>
     </widget>
    </item>
    <item>
@@ -258,7 +325,7 @@
            <number>0</number>
           </property>
           <property name="horizontalSpacing">
-           <number>-1</number>
+           <number>6</number>
           </property>
           <property name="verticalSpacing">
            <number>4</number>
