--- a/Qt/Core/Resources/UI/pqOutputWidget.ui
+++ b/Qt/Core/Resources/UI/pqOutputWidget.ui
@@ -75,7 +75,7 @@
      <item>
       <widget class="QPushButton" name="copyButton">
        <property name="text">
-        <string>Copy to Clipboard.</string>
+        <string>Copy to Clipboard</string>
        </property>
       </widget>
      </item>
